Applying Secrets: fix missing secrets for VPN plugins without explicit storage type. Thanks Andrey Borzenkov for this patch.

REVIEW: 100856
BUG: 262555