libs/internals/settings/vpn.cpp
@@ -23,21 +23,11 @@ bool VpnSetting::hasSecrets() const
   return true;
 }
 
-bool VpnSetting::secretsAvailable() const
+bool VpnSetting::hasVolatileSecrets() const
 {
-  /*
-   * secrets were loaded from persistente storage
-   * Now verify that all secrets of type "save" are actually present
-   * and no secret of type "ask" exists
-   */
+  foreach(const QString & s, mSecretsStorageType.keys())
+    if (mSecretsStorageType.value(s) == QLatin1String(NM_VPN_PW_TYPE_ASK))
+      return true;
 
-  foreach(const QString & s, mSecretsStorageType.keys()) {
-    if (mSecretsStorageType.value(s) == NM_VPN_PW_TYPE_ASK)
-      return false;
-    if (mSecretsStorageType.value(s) == NM_VPN_PW_TYPE_SAVE && !mVpnSecrets.contains(s))
-      return false;
-  }
-
-  return true;
+  return false;
 }
-
